--- a/Search Ranking Tool/src/SearchRankingTool/SearchRankingTool.csproj
+++ b/Search Ranking Tool/src/SearchRankingTool/SearchRankingTool.csproj
@@ -13,7 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
         <PackageReference Include="Cocona" Version="2.2.0" />
-        <PackageReference Include="FuzzySharp" Version="2.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.17" />
     </ItemGroup>
 
 </Project>
