--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Search Ranking Tool/.idea/
 Search Ranking Tool/src/SearchRankingTool/bin/
 
 Search Ranking Tool/src/SearchRankingTool/obj/
+
+.DS_Store
